--- a/hugo.toml
+++ b/hugo.toml
@@ -2,6 +2,10 @@ baseURL = 'https://itchronicles.org/'
 languageCode = 'en-us'
 title = 'itchronicles'
 
+# Enforce trailing slashes in URLs
+uglyURLs = false
+canonifyURLs = true
+
 [pagination]
 pagerSize = "4"
 
