--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://itchronicles.org/'
 languageCode = 'en-us'
-title = 'itchronicles'
+title = 'ITChronicles'
 
 # Enforce trailing slashes in URLs
 uglyURLs = false
@@ -10,7 +10,7 @@ canonifyURLs = true
 pagerSize = "4"
 
 [params]
-  description = "itchronicles - is a technology blog and knowledge base covering subjects like homelabbing, servers, security, DevOps and more. Providing How-To tutorials and articles for anyone interested in IT."
+  description = "ITChronicles - is a technology blog and knowledge base covering subjects like homelabbing, servers, security, DevOps and more. Providing How-To tutorials and articles for anyone interested in IT."
   dateFormat = "2.Jan.2006"
 
 [taxonomies]
